# nonebot_plugin_number_detection

./: .gitignore  README.md  pyproject.toml
src/nonebot_plugin_number_detection/: __init__.py  config.py
